# webserver

./: .gitignore  2_client_test.cpp  64coder.cpp  CMakeLists.txt  Client.cpp  Client.hpp  Config.hpp  Makefile  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  client.cpp  client_test.cpp  client_test_auth.cpp  config  convertConfig.cpp  default  main.cpp  nginx.conf  readConfig.cpp  server.cpp  server_test.cpp  server_tools.cpp  test_stat.cpp  test_time.cpp  utils.cpp  webserv  Сlient.cpp
content/: 1sttry.html  default  index.html  post.html
content/auth/: auth.html
content/error/: directory.html
content/photo/: directory.html
content/post/: post.html
example/: Makefile  tempbuffer
example/conf/: basic.conf  basic_den.conf  basic_tekuschaya.conf
example/content/: cgi1.cgi  env_check.cgi  index.html  post.html  test.php
example/includes/: Client.hpp  ErrnoException.hpp  Http.hpp  Request.hpp  Response.hpp  Serv.hpp  Sock.hpp  conf_parser.hpp  conf_utils.hpp  error_handler.hpp  signal_handler.hpp  (+2 more)
example2/: ClassGenErrorPage.cpp  ClassGenErrorPage.hpp  ClassParser.cpp  ClassParser.hpp  Client.hpp  Http.cpp  Http.hpp  HttpHeaders.cpp  HttpHeaders.hpp  Makefile  RequestParser.cpp  RequestParser.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  big_changus.cpp  cgi_file_output.txt  client.cpp  main.cpp  parser_check.cpp  parser_config.cppp  parser_config.hpp  parser_errors.cpp  parser_errors.hpp  parser_mime_types.cpp  parser_set_data.cpp  parser_utils.cpp  system_include.hpp  web_server  webserv.conf
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_nbrlen_base.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c  ft_rev_arr.c  ft_split.c  ft_strchr.c  (+18 more)
(+37 files in other folders)
